LIBDRUM-671. Made collections layout more similar to Unit/Groups layout
Modified the add/remove collections layout on the ETD Units form
to be more similar to the add/remove groups layout on the Units
form.

https://umd-dit.atlassian.net/browse/LIBDRUM-671

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -728,6 +728,8 @@
 
   "admin.core.etdunits.form.collection-mapper.description": "This is the collection mapper tool that allows administrators to map collections to ETD Department. You can search for collections and map them, or browse the list of collections currently mapped to the ETD Department.",
 
+  "admin.core.etdunits.form.collections.head": "Collections",
+
   "admin.core.etdunits.form.collection-mapper.mapped-collections.head": "Current Members",
 
   "admin.core.etdunits.form.collection-mapper.head": "Add Collections",
