LIBDRUM-711. Added heading for "Equitable Access" form section
Updated "en.json5" with heading for the "Equitable Access" form section.

https://umd-dit.atlassian.net/browse/LIBDRUM-711

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5128,5 +5128,6 @@
 
   "embargo-list.table.label.endDate": "End Date",
 
+  "submission.sections.submit.progressbar.equitableAccessSubmission": "Equitable Access",
   // End UMD Customization
 }
