LIBDRUM-678. Added "restricted-access" module and page
Added a "restricted-access" module that shows the "Restricted Access"
page when a bitstream is embargoed, or otherwise not downloadable by
the user (such as due to a "Campus" IP restriction, and the user is
off-campus).

Displays a "(RESTRICTED ACCESS)" text marker below the download link
whenever the bitstream has an active embargo (shown for all users, even
if the user can actually download the bitstream).

The "Restricted Access" page show differing text based on whether the
file has a time-limited embargo, a forever embargo, the user is logged
in, or if there is some other (non-embargo) restriction.

https://umd-dit.atlassian.net/browse/LIBDRUM-678

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5129,5 +5129,22 @@
   "embargo-list.table.label.endDate": "End Date",
 
   "submission.sections.submit.progressbar.equitableAccessSubmission": "Equitable Access",
+
+  "bitstream.embargoed.text": "(RESTRICTED ACCESS)",
+
+  "bitstream.restricted-access.title": "This resource is restricted",
+
+  "bitstream.restricted-access.header": "Restricted Access",
+
+  "bitstream.restricted-access.embargo.forever.message": "At the request of the author, this document is not available.",
+
+  "bitstream.restricted-access.embargo.restricted-until.message": "At the request of the author, this document is not available until {{ restrictedAccessDate }}.",
+
+  "bitstream.restricted-access.anonymous.forbidden.message": "The file you are attempting to access is restricted.",
+
+  "bitstream.restricted-access.user.forbidden.header": "This bitstream is restricted",
+
+  "bitstream.restricted-access.user.forbidden.message": "You do not have the credentials to access this restricted bitstream."
+
   // End UMD Customization
 }
