LIBDRUM-678. Modified restricted access routing to retrieve bitstream
Modified the "RestrictedAccessPageRoutingModule" to use the
BitstreamPageResolver to retrieve the bitstream so that information
about the bitstream (such as embargo date or filename) can be used in
the restricted access page.

Modified the "BitstreamDownloadPageComponent to include the bitstream
UUID in the navigation to the restricted access page, so that it can
be used to retrieve the bitstream.

Modified the "RestrictedAccessComponent" to retrieve the appropriate
messages and display, based on the user's login status, and the embargo
restrictions.

https://umd-dit.atlassian.net/browse/LIBDRUM-678

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5144,7 +5144,9 @@
 
   "bitstream.restricted-access.user.forbidden.header": "This bitstream is restricted",
 
-  "bitstream.restricted-access.user.forbidden.message": "You do not have the credentials to access this restricted bitstream."
+  "bitstream.restricted-access.user.forbidden.with_file.message": "You do not have the credentials to access the restricted bitstream '{{ filename }}'.",
+
+  "bitstream.restricted-access.user.forbidden.generic.message": "You do not have the credentials to access this restricted bitstream.",
 
   // End UMD Customization
 }
