LIBDRUM-740. Added "Publication or External Link" and "Rights" fields
Added fields for "dc.description.uri" (Publication or External Link) and
"dc.rights"/"dc.rights.uri" (Rights), with appropriate default I18n text
for the labels.

https://umd-dit.atlassian.net/browse/LIBDRUM-740

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5090,9 +5090,13 @@
   // UMD Customization
   "menu.header.organization.logo": "UMD Libraries",
 
+  "item.page.advisor": "Advisor",
+
   "item.page.doi": "DRUM DOI",
 
-  "item.page.advisor": "Advisor",
+  "item.page.publicationlink": "Publication or External Link",
+
+  "item.page.rights": "Rights",
 
   "community_group.faculty.title": "Collections Organized by Department",
 
