LIBDRUM-740. Type-based labels for "Publication Link" and "Citation"
Added code to show different labels for "Publication Link"
(dc.description.uri) and "Citation" (dc.identifier.uri) based on whether
the item was of type "Dataset"/"Software" or some other type.

These label changes are related to similar label changes in the
"dspace/config/submission-forms.xml" in the DSpace back-end code.

https://umd-dit.atlassian.net/browse/LIBDRUM-740

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5092,9 +5092,13 @@
 
   "item.page.advisor": "Advisor",
 
+  "item.page.citation.datasetOrSoftware": "Related Publication Citation",
+
   "item.page.doi": "DRUM DOI",
 
-  "item.page.publicationlink": "Publication or External Link",
+  "item.page.publicationLink": "Publication or External Link",
+
+  "item.page.publicationLink.datasetOrSoftware": "Related Publication Link",
 
   "item.page.rights": "Rights",
 
