LIBDRUM-740. Updated description and handle labels
Modified the label that is displayed for the "dc.description" and
"dc.identifier.uri" field in the en.json5 file, as these labels do
not change based on type.

https://umd-dit.atlassian.net/browse/LIBDRUM-740

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5094,6 +5094,8 @@
 
   "item.page.citation.datasetOrSoftware": "Related Publication Citation",
 
+  "item.page.description": "Notes",
+
   "item.page.doi": "DRUM DOI",
 
   "item.page.publicationLink": "Publication or External Link",
@@ -5101,6 +5103,8 @@
   "item.page.publicationLink.datasetOrSoftware": "Related Publication Link",
 
   "item.page.rights": "Rights",
+
+  "item.page.uri": "URI (handle)",
 
   "community_group.faculty.title": "Collections Organized by Department",
 
