LIBDRUM-734. Switch order of log in options on Log In menu
Modified the "AuthInterceptor" class to place the "CAS" authentication
method as the first entry in the sorted array, instead of "password".
This ensures that that the "CAS" option will appear first in the
"LoginComponent" drop-down list.

Modified button labels in the "en.json5" file to match the requests
in the issue.

https://umd-dit.atlassian.net/browse/LIBDRUM-734

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -2830,12 +2830,14 @@
   "login.form.password": "Password",
 
   // UMD Customization
-  "login.form.cas": "Log in with CAS",
+  "login.form.cas": "UMD Login",
   // End  UMD Customization
 
   "login.form.shibboleth": "Log in with Shibboleth",
 
-  "login.form.submit": "Log in",
+  // UMD Customization
+  "login.form.submit": "Guest Researcher Login",
+  // End UMD Customization
 
   "login.title": "Login",
 
