LIBDRUM-737. Override I18n keys containing "MyDSpace"
Overrode all I18n keys with values containing the word "MyDSpace" by
adding the keys to the "UMD Customization" section and replacing
"MyDSpace" with "My Submissions".

https://umd-dit.atlassian.net/browse/LIBDRUM-737

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5160,7 +5160,13 @@
 
   "menu.section.drum_customizations_etdunits": "ETD Departments",
 
+  "mydspace.breadcrumbs": "My Submissions",
+
+  "mydspace.title": "My Submissions",
+
   "nav.browse.header": "All of DRUM",
+
+  "nav.mydspace": "My Submissions",
 
   "register-page.registration.info": "Register an account to subscribe to collections for email updates, and submit new items to DRUM.",
 
@@ -5169,6 +5175,8 @@
   "repository.title.prefixDSpace": "DRUM ::",
 
   "search.form.scope.all": "All of DRUM",
+
+  "submission.import-external.back-to-my-dspace": "Back to My Submissions",
 
   "submission.import-external.page.hint": "Enter a query above to find items from the web to import in to DRUM.",
 
