LIBDRUM-737. Override I18n keys containing "Your Submissions"
Also overrode I18n keys with values containing the words
"Your Submissions" by adding the keys to the "UMD Customization" section
and replacing with "My Submissions" (capitalizing "submissions" as
appropriate).

https://umd-dit.atlassian.net/browse/LIBDRUM-737

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5162,6 +5162,10 @@
 
   "mydspace.breadcrumbs": "My Submissions",
 
+  "mydspace.results.head": "My submissions",
+
+  "mydspace.show.workspace": "My Submissions",
+
   "mydspace.title": "My Submissions",
 
   "nav.browse.header": "All of DRUM",
@@ -5183,6 +5187,8 @@
   "submission.sections.submit.progressbar.equitableAccessSubmission": "Equitable Access",
 
   "title": "DRUM",
+
+  "workspace.search.results.head": "My submissions",
 
   // End  UMD Customization
 }
